welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:13: error: not found: value compteur
      compteur = 1
      ^